fixing alignment

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ a:hover {
   font-size: 14pt;
   line-height: 180%;
   vertical-align: middle;
-  width: 350pt;
+  width: 380pt;
 }
 
 .header {
